test/parse/module/bad-table-too-many.txt
;;; TOOL: wat2wasm
;;; ARGS: --disable-reference-types
;;; ERROR: 1
(module
  (func (param i32))
  (table funcref (elem 0))
  (table funcref (elem 0)))
(;; STDERR ;;;
out/test/parse/module/bad-table-too-many.txt:7:4: error: only one table allowed
  (table funcref (elem 0)))
   ^^^^^
;;; STDERR ;;)
